--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 }
 </script>
 </head>
-<body class="bg-black text-white overflow-hidden">
+<body class="bg-black text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
