feat: Enhance registration page metadata and share modal
Adds favicon, Open Graph tags, and WhatsApp preview metadata to index.html for better social sharing and site identification.

Updates the ShareModal component in components/ShareModal.tsx to improve the success message, clearly indicating WhatsApp contact and adding a line break for better readability.

Introduces a loading state and handles the window 'load' event in App.tsx to manage the initial rendering of the application, ensuring smooth transitions and proper font loading. Also adds functionality to copy a pre-registration link without requiring a full submission.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Naruto RPG - Inscrição</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" href="https://i.pinimg.com/originals/55/66/79/556679b0cd181056939b3f1f1aca1a86.jpg" type="image/jpeg">
+    
+    <!-- Open Graph / WhatsApp Preview -->
+    <meta property="og:title" content="Naruto RPG - Escolha seu Clã">
+    <meta property="og:description" content="A guerra ninja começou. Inscreva-se, escolha seu lado e recrute aliados para dominar o mundo ninja.">
+    <meta property="og:image" content="https://i.pinimg.com/originals/55/66/79/556679b0cd181056939b3f1f1aca1a86.jpg">
+    <meta property="og:type" content="website">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
