--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -54,18 +55,18 @@
             border-radius: 45%;
         }
 
-        /* --- SOLID FIRE Animation (Updated for Taller Flames) --- */
+        /* --- SOLID FIRE Animation (Increased Size) --- */
         .solid-flame {
             position: absolute;
-            bottom: -150px; /* Start deeper below */
-            width: 40px; /* Thinner width */
-            height: 160px; /* Much taller height */
+            bottom: -200px; /* Start deeper below */
+            width: 65px; /* Wider flames (was 40px) */
+            height: 350px; /* Massive height (was 160px) */
             /* Elongated flame shape */
             border-radius: 50% 50% 30% 30%;
             /* Solid vibrant gradient, vertical */
             background: linear-gradient(to top, #7f1d1d 0%, #ef4444 30%, #fcd34d 80%, rgba(255, 255, 0, 0) 100%);
             /* Slight blur */
-            filter: blur(5px);
+            filter: blur(8px);
             opacity: 0;
             z-index: 1;
             /* Animation defined inline via React to use CSS vars */
@@ -80,7 +81,7 @@
                 opacity: 0;
             }
             10% {
-                opacity: 0.8;
+                opacity: 0.9;
             }
             100% {
                 /* Move WAY up to cover screen height */
@@ -95,8 +96,8 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 70%;
-            background: linear-gradient(to top, rgba(220, 38, 38, 0.7), transparent);
+            height: 80%;
+            background: linear-gradient(to top, rgba(220, 38, 38, 0.8), transparent);
             filter: blur(50px);
             z-index: 0;
             animation: ambient-pulse 3s infinite alternate;
